# rust-test

./: Cargo.toml  readme.md
axum_url_shortener/: Cargo.toml
axum_url_shortener/.http/: test.http
axum_url_shortener/src/: main.rs  router.rs
axum_url_shortener/src/initialize/: load_config.rs  setup_logger.rs
axum_url_shortener/src/lib/: initialize.rs
config/: logger_setting.env
config_val/: Cargo.toml
config_val/config/: config.toml
config_val/src/: main.rs
config_val/src/initialize/: file_config.rs  file_config_2.rs  mod.rs
confy_example/: Cargo.toml
confy_example/src/: main.rs  キーを増やしてみる.rs  保存パスの変更.rs  最小構成.rs
confy_example/src/initialize/: load_config.rs  mod.rs
design_patterns/: design_patterns.md
design_patterns/src/: command_use_fn_trait.rs  command_use_pointers.rs  command_use_trait.rs  main.rs
dotenv_example/: Cargo.toml
dotenv_example/src/: main.rs
dotenv_example/src/initialize/: load_config.rs
idioms/: ideoms.md
idioms/src/: argments.rs  default.rs  enum_clone.rs  main.rs  option.rs  test_template.rs
logging_example/: Cargo.toml
logging_example/src/: env_logger検証.rs  init.rs  log4rsの検証.rs  main.rs  標準出力検討.rs
logging_example/src/init2/: logger.rs  mod.rs
