[package]
name = "test_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "idioms",
  "design_patterns",
  "axum_url_shortener",
  "config_val",
  "logging_example"
  ]
# default-members = [""]

[dependencies]
