[package]
name = "axum_url_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logger関係
log = "0.4.0"
log4rs = "1.2.0"
chrono = "0.4.22"

# config
serde = "^1.0"
serde_derive = "^1.0"
confy = "^0.4"
once_cell = "1.16.0"

# axum
axum = {version = "0.5.15", features = ["macros"]}
tokio = {version = "1.21.0", features = ["full"]}
nanoid = "0.4.0"